Fixed footer align bug on phone.

--- a/source/css/footer.styl
+++ b/source/css/footer.styl
@@ -78,6 +78,7 @@
   @media (max-width: 40em) {
     .footer-container {
       flex-direction: column-reverse;
+      align-items: stretch;
       .footer-left {
         text-align: center;
         max-width: 100%;
